feat:implements document preview

--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "fs": "^0.0.1-security",
+    "node": "^18.20.7",
     "nodemailer": "^6.10.0",
     "openai": "^4.85.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pdf-parse": "^1.1.1",
+    "pdfkit": "^0.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
@@ -57,6 +60,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/pdf-parse": "^1.1.4",
+    "@types/pdfkit": "^0.13.9",
     "@types/sharp": "^0.32.0",
     "@types/supertest": "^6.0.2",
     "@types/tesseract.js": "^2.0.0",
