--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "openai": "^4.85.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.16.0",
     "reflect-metadata": "^0.2.2",
